--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,13 @@ before_script:
 script: grunt
 after_success:
 - bash ./deploy.sh
+- wget https://raw.githubusercontent.com/k3rn31p4nic/travis-ci-discord-webhook/master/send.sh
+- chmod +x send.sh
+- ./send.sh success $WEBHOOK_URL
+after_failure:
+- wget https://raw.githubusercontent.com/k3rn31p4nic/travis-ci-discord-webhook/master/send.sh
+- chmod +x send.sh
+- ./send.sh failure $WEBHOOK_URL
 env:
     global:
     - ENCRYPTION_LABEL: "73d8465e773a"
