--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-tree": "^1.1.1",
+    "grunt-compile-handlebars": "git://github.com/mikemellor11/grunt-compile-handlebars",
+    "handlebars-helpers": "^0.8.2",
+    "grunt-site": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-site": "^1.0.1"
+    "grunt-contrib-copy": "^1.0.0"
   }
 }
